--- a/index.scss
+++ b/index.scss
@@ -58,7 +58,6 @@ h1 {
 .initial-container {
     .navigation {
         grid-area: navigation;
-        background-color: $color-principal;
     }
 
     .header {
@@ -78,6 +77,7 @@ h1 {
 
 /*  =============================NAVIGATION========================== */
 .navigation {
+    background-color: $color-principal;
     display: grid;
     height: auto;
     width: 100%;
@@ -242,7 +242,7 @@ h1 {
     }
 }
 /* Header Media queries */
-@media screen and (min-width: 768px) and (min-width: 1000px){
+@media screen and (min-width: 1000px){
     .header {
         display: grid;
         width: 100%;
@@ -251,11 +251,7 @@ h1 {
     }
 }
 
-// @media screen and (max-width: 1000px) {
-
-// }
-
-@media screen and (max-width: 1200px) {
+@media screen and (min-width: 1200px) {
     .header {
         justify-content: space-around;
         .header-content {
@@ -274,57 +270,91 @@ h1 {
 /*  =============================MAIN========================== */
 
 .main {
-    display: grid;
-    width: 100%;
-    justify-content: center;
+    margin-top: 100px;
     .solutions {
         display: grid;
         gap: 5px;
-        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr;
         grid-template: 
-            "card-1 card-2 card-3"
+            "card-1"
+            "card-2"
+            "card-3"
         ;
+        justify-content: center;
+        border: 1px solid black;
+        .card-1 {
+            grid-area: card-1;
+            display: grid;
+            grid-template-columns: 1fr;
+            grid-column: 1fr;
+            grid-template-areas: 
+                "img"
+                "p"
+            ;
+            justify-content: center;
+            align-items: center;
+            padding: 10px;
+            border: 1px solid black;
+            img {
+                height: auto;
+                max-width: 100%;
+                vertical-align: middle;
+                grid-area: img;
+            }
+            p{
+                grid-area: p;
+            }
+        }
 
-            .card-1 {
-                grid-area: card-1;
-                display: flex;
-                flex-direction: column;
-                flex-wrap: wrap;
-                img {
-                    width: 90%;
-                }
-                p {
-                    text-align: center;
-                    margin-left: 5px;
-                }
+        .card-2 {
+            grid-area: card-2;
+            display: grid;
+            grid-template-columns: 1fr;
+            grid-column: 1fr;
+            grid-template-areas: 
+                "img"
+                "p"
+            ;
+            justify-content: center;
+            align-items: center;
+            padding: 10px;
+            border: 1px solid black;
+            img {
+                height: auto;
+                max-width: 100%;
+                vertical-align: middle;
+                grid-area: img;
             }
-    
-            .card-2 {
-                grid-area: card-2;
-                display: flex;
-                flex-direction: column;
-                flex-wrap: wrap;
-                img {
-                    width: 90%;
-                }
-                p {
-                    text-align: center;
-                }
+            p{
+                grid-area: p;
             }
-    
-            .card-3 {
-                grid-area: card-3;
-                display: flex;
-                flex-direction: column;
-                flex-wrap: wrap;
-                padding: 20px;
-                img {
-                    width: 90%;
-                }
-                p {
-                    text-align: center;
-                }
+        }
+        
+
+        .card-3 {
+            grid-area: card-3;
+            display: grid;
+            grid-template-columns: 1fr;
+            grid-column: 1fr;
+            grid-template-areas: 
+                "img"
+                "p"
+            ;
+            justify-content: center;
+            align-items: center;
+            padding: 10px;
+            border: 1px solid black;
+            img {
+                height: auto;
+                max-width: 100%;
+                vertical-align: middle;
+                grid-area: img;
             }
+            p{
+                grid-area: p;
+            }
+        }
     }
 }
 
