--- a/index.css
+++ b/index.css
@@ -26,11 +26,18 @@ body {
 /*  =============================FONTS========================== */
 /*  =============================FONTS========================== */
 /*  =============================TAG STYLE========================== */
-h1 {
+.h1 {
   text-align: center;
   text-transform: uppercase;
   font-family: "Bebas Neue", cursive;
   font-size: 4rem;
+  background-color: #751bff;
+  color: white;
+  width: 70%;
+  border-radius: 20px 0 20px 0;
+  margin-left: 20px;
+  -webkit-box-shadow: 6px 6px 16px -5px rgba(0, 0, 0, 0.75);
+  box-shadow: 6px 6px 16px -5px rgba(0, 0, 0, 0.75);
 }
 
 /*  =============================TAG STYLE========================== */
@@ -40,7 +47,7 @@ h1 {
   display: grid;
   height: auto;
   width: 100%;
-      grid-template-areas: "navigation" "header" "main" "footer";
+      grid-template-areas: "navigation" "header" "main" "footer";
 }
 
 .initial-container .navigation {
@@ -75,7 +82,7 @@ h1 {
   display: grid;
   height: auto;
   width: 100%;
-      grid-template-areas: "logo" "nav";
+      grid-template-areas: "logo" "nav";
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
@@ -203,7 +210,7 @@ h1 {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-      grid-template-areas: "header-logo" "header-content";
+      grid-template-areas: "header-logo" "header-content";
 }
 
 .header .header-logo {
@@ -236,8 +243,8 @@ h1 {
         }*/
 }
 
-.header .header-content h1 {
-  background-color: #6c63ff;
+.header .header-content .h1 {
+  background-color: #751bff;
   color: white;
   width: 70%;
   border-radius: 20px 0 20px 0;
@@ -269,7 +276,7 @@ h1 {
 }
 
 .header .header-content button:hover {
-  background-color: #6c63ff;
+  background-color: #751bff;
   color: white;
   cursor: pointer;
 }
@@ -310,6 +317,11 @@ h1 {
   margin-top: 100px;
 }
 
+.main .h1 {
+  display: block;
+  margin: 50px auto;
+}
+
 .main .solutions {
   display: -ms-grid;
   display: grid;
@@ -318,11 +330,10 @@ h1 {
       grid-template-columns: 1fr;
   -ms-grid-rows: 1fr;
       grid-template-rows: 1fr;
-  grid-template: "card-1" "card-2" "card-3";
+  grid-template: "card-1" "card-2" "card-3";
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  border: 1px solid black;
 }
 
 .main .solutions .card-1 {
@@ -333,30 +344,35 @@ h1 {
       grid-template-columns: 1fr;
   -ms-grid-column: 1;
   grid-column: 1fr;
-      grid-template-areas: "img" "p";
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+      grid-template-areas: "img" "p";
   padding: 10px;
-  border: 1px solid black;
 }
 
 .main .solutions .card-1 img {
-  height: auto;
-  max-width: 100%;
-  vertical-align: middle;
   -ms-grid-row: 1;
   -ms-grid-column: 1;
   grid-area: img;
+  display: block;
+  margin: auto;
+  height: auto;
+  max-width: 100%;
+  border-radius: 10px 10px 10px 10px;
 }
 
 .main .solutions .card-1 p {
+  text-align: center;
   -ms-grid-row: 2;
   -ms-grid-column: 1;
   grid-area: p;
+  margin: 20px auto;
+}
+
+.main .solutions .card-1 p span {
+  color: #751bff;
+  font-family: "Nanum Gothic", sans-serif;
+  text-transform: uppercase;
+  font-weight: bold;
+  font-size: 1.2rem;
 }
 
 .main .solutions .card-2 {
@@ -367,7 +383,7 @@ h1 {
       grid-template-columns: 1fr;
   -ms-grid-column: 1;
   grid-column: 1fr;
-      grid-template-areas: "img" "p";
+      grid-template-areas: "img" "p";
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
@@ -375,7 +391,6 @@ h1 {
       -ms-flex-align: center;
           align-items: center;
   padding: 10px;
-  border: 1px solid black;
 }
 
 .main .solutions .card-2 img {
@@ -401,7 +416,7 @@ h1 {
       grid-template-columns: 1fr;
   -ms-grid-column: 1;
   grid-column: 1fr;
-      grid-template-areas: "img" "p";
+      grid-template-areas: "img" "p";
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
@@ -409,7 +424,6 @@ h1 {
       -ms-flex-align: center;
           align-items: center;
   padding: 10px;
-  border: 1px solid black;
 }
 
 .main .solutions .card-3 img {
