--- a/index.css
+++ b/index.css
@@ -30,7 +30,7 @@ body {
   text-align: center;
   text-transform: uppercase;
   font-family: "Bebas Neue", cursive;
-  font-size: 4rem;
+  font-size: 2.5rem;
   background-color: #751bff;
   color: white;
   width: 70%;
@@ -38,6 +38,33 @@ body {
   margin-left: 20px;
   -webkit-box-shadow: 6px 6px 16px -5px rgba(0, 0, 0, 0.75);
   box-shadow: 6px 6px 16px -5px rgba(0, 0, 0, 0.75);
+}
+
+.button-primary {
+  display: block;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin: auto;
+  padding: 10px 30px 10px 30px;
+  font-size: 1.2rem;
+  font-family: "Nanum Gothic", sans-serif;
+  text-transform: uppercase;
+  background-color: transparent;
+  color: black;
+  border: 1px solid black;
+}
+
+.button-primary:hover {
+  background-color: #751bff;
+  color: white;
+  cursor: pointer;
+  border: 1px solid transparent;
+}
+
+.button-primary {
+  -webkit-transition: background-color 0.2s ease-out;
+  transition: background-color 0.2s ease-out;
 }
 
 /*  =============================TAG STYLE========================== */
@@ -93,20 +120,17 @@ body {
 }
 
 .navigation .logo {
-  text-align: start;
-  margin-left: 20px;
   -ms-grid-row: 1;
   -ms-grid-column: 1;
   grid-area: logo;
+  text-align: center;
 }
 
 .navigation .logo img {
-  max-width: 400px;
-  max-height: 400px;
+  max-width: auto;
 }
 
 .navigation .nav {
-  text-align: center;
   -ms-grid-row: 2;
   -ms-grid-column: 1;
   grid-area: nav;
@@ -116,9 +140,9 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: start;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
@@ -127,7 +151,7 @@ body {
       flex-wrap: wrap;
   list-style: none;
   gap: 1.5em;
-  margin-left: 20px;
+  padding-left: 0px;
 }
 
 .navigation .nav li {
@@ -170,6 +194,7 @@ body {
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
+    padding-left: 20px;
   }
   .navigation .nav ul li {
     font-size: 1.3rem;
@@ -210,6 +235,10 @@ body {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  -ms-grid-columns: 1fr;
+      grid-template-columns: 1fr;
+  -ms-grid-rows: 1fr;
+      grid-template-rows: 1fr;
       grid-template-areas: "header-logo" "header-content";
 }
 
@@ -217,11 +246,15 @@ body {
   -ms-grid-row: 1;
   -ms-grid-column: 1;
   grid-area: header-logo;
-  margin: 20px;
 }
 
 .header .header-logo img {
-  width: 100%;
+  display: block;
+  margin: auto;
+  height: auto;
+  width: 400px;
+  height: 400px;
+  max-width: 100%;
 }
 
 .header .header-content {
@@ -233,61 +266,24 @@ body {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  /*.switch {
-            display: block;
-            white-space: nowrap;
-            border-right: 2px solid;
-            width: 100%;
-            animation: typing 3s steps(30), blink 0.5s infinite step-end alternate;
-            overflow: hidden;
-        }*/
 }
 
 .header .header-content .h1 {
-  background-color: #751bff;
-  color: white;
-  width: 70%;
-  border-radius: 20px 0 20px 0;
-  margin-left: 20px;
-  -webkit-box-shadow: 6px 6px 16px -5px rgba(0, 0, 0, 0.75);
-  box-shadow: 6px 6px 16px -5px rgba(0, 0, 0, 0.75);
+  font-size: 2.5rem;
 }
 
 .header .header-content p {
   margin: 0;
   font-family: "Nanum Gothic", sans-serif;
-  font-size: 2rem;
+  font-size: 1.5rem;
 }
 
 .header .header-content button {
-  display: block;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  margin: auto;
-  margin-top: 100px;
-  padding: 10px 30px 10px 30px;
-  font-size: 1.2rem;
-  font-family: "Nanum Gothic", sans-serif;
-  text-transform: uppercase;
-  background-color: transparent;
-  color: black;
-  border: 1px solid black;
-}
-
-.header .header-content button:hover {
-  background-color: #751bff;
-  color: white;
-  cursor: pointer;
-}
-
-.header .header-content button {
-  -webkit-transition: background-color 0.2s ease-out;
-  transition: background-color 0.2s ease-out;
+  margin-top: 50px;
 }
 
 /* Header Media queries */
-@media screen and (min-width: 1000px) {
+@media screen and (min-width: 972px) {
   .header {
     display: -ms-grid;
     display: grid;
@@ -296,15 +292,8 @@ body {
         justify-content: space-around;
         grid-template-areas: "header-logo header-content";
   }
-}
-
-@media screen and (min-width: 1200px) {
-  .header {
-    -ms-flex-pack: distribute;
-        justify-content: space-around;
-  }
-  .header .header-content h1 {
-    font-size: 3rem;
+  .header .header-content .h1 {
+    font-size: 2.8rem;
   }
   .header .header-content p {
     font-size: 1.5rem;
@@ -314,18 +303,19 @@ body {
 /*  =============================HEADER========================== */
 /*  =============================MAIN========================== */
 .main {
-  margin-top: 100px;
+  margin-top: 50px;
 }
 
 .main .h1 {
   display: block;
   margin: 50px auto;
+  font-size: 2.5rem;
 }
 
 .main .solutions {
   display: -ms-grid;
   display: grid;
-  gap: 5px;
+  gap: 50px 0px;
   -ms-grid-columns: 1fr;
       grid-template-columns: 1fr;
   -ms-grid-rows: 1fr;
@@ -344,8 +334,7 @@ body {
       grid-template-columns: 1fr;
   -ms-grid-column: 1;
   grid-column: 1fr;
-      grid-template-areas: "img" "p";
-  padding: 10px;
+      grid-template-areas: "img" "p" "button";
 }
 
 .main .solutions .card-1 img {
@@ -355,16 +344,19 @@ body {
   display: block;
   margin: auto;
   height: auto;
+  width: 100%;
   max-width: 100%;
-  border-radius: 10px 10px 10px 10px;
 }
 
 .main .solutions .card-1 p {
-  text-align: center;
   -ms-grid-row: 2;
   -ms-grid-column: 1;
   grid-area: p;
+  text-align: center;
   margin: 20px auto;
+  font-family: "Roboto Condensed", sans-serif;
+  font-size: 1.5em;
+  padding: 20px;
 }
 
 .main .solutions .card-1 p span {
@@ -375,6 +367,13 @@ body {
   font-size: 1.2rem;
 }
 
+.main .solutions .card-1 button {
+  -ms-grid-row: 3;
+  -ms-grid-column: 1;
+  grid-area: button;
+  font-size: 0.8rem;
+}
+
 .main .solutions .card-2 {
   grid-area: card-2;
   display: -ms-grid;
@@ -383,29 +382,44 @@ body {
       grid-template-columns: 1fr;
   -ms-grid-column: 1;
   grid-column: 1fr;
-      grid-template-areas: "img" "p";
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  padding: 10px;
+      grid-template-areas: "img" "p" "button";
 }
 
 .main .solutions .card-2 img {
-  height: auto;
-  max-width: 100%;
-  vertical-align: middle;
   -ms-grid-row: 1;
   -ms-grid-column: 1;
   grid-area: img;
+  display: block;
+  margin: auto;
+  height: auto;
+  width: 100%;
+  max-width: 100%;
 }
 
 .main .solutions .card-2 p {
   -ms-grid-row: 2;
   -ms-grid-column: 1;
   grid-area: p;
+  text-align: center;
+  margin: 20px auto;
+  font-family: "Roboto Condensed", sans-serif;
+  font-size: 1.5em;
+  padding: 20px;
+}
+
+.main .solutions .card-2 p span {
+  color: #751bff;
+  font-family: "Nanum Gothic", sans-serif;
+  text-transform: uppercase;
+  font-weight: bold;
+  font-size: 1.2rem;
+}
+
+.main .solutions .card-2 button {
+  -ms-grid-row: 3;
+  -ms-grid-column: 1;
+  grid-area: button;
+  font-size: 0.8rem;
 }
 
 .main .solutions .card-3 {
@@ -416,44 +430,73 @@ body {
       grid-template-columns: 1fr;
   -ms-grid-column: 1;
   grid-column: 1fr;
-      grid-template-areas: "img" "p";
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  padding: 10px;
+      grid-template-areas: "img" "p" "button";
 }
 
 .main .solutions .card-3 img {
-  height: auto;
-  max-width: 100%;
-  vertical-align: middle;
   -ms-grid-row: 1;
   -ms-grid-column: 1;
   grid-area: img;
+  display: block;
+  margin: auto;
+  height: auto;
+  width: 100%;
+  max-width: 100%;
 }
 
 .main .solutions .card-3 p {
   -ms-grid-row: 2;
   -ms-grid-column: 1;
   grid-area: p;
+  text-align: center;
+  margin: 20px auto;
+  font-family: "Roboto Condensed", sans-serif;
+  font-size: 1.5em;
+  padding: 20px;
 }
 
+.main .solutions .card-3 p span {
+  color: #751bff;
+  font-family: "Nanum Gothic", sans-serif;
+  text-transform: uppercase;
+  font-weight: bold;
+  font-size: 1.2rem;
+}
+
+.main .solutions .card-3 button {
+  -ms-grid-row: 3;
+  -ms-grid-column: 1;
+  grid-area: button;
+  font-size: 0.8rem;
+}
+
+/* Media Queries Main */
+@media screen and (min-width: 768px) {
+  .main .solutions .card-1 {
+    margin: 20px;
+    padding: 0px 0px 20px 0px;
+    border: 1px solid #8b8b8b;
+  }
+  .main .solutions .card-2 {
+    margin: 20px;
+    padding: 0px 0px 50px 0px;
+    border: 1px solid #8b8b8b;
+  }
+  .main .solutions .card-3 {
+    margin: 20px;
+    padding: 0px 0px 20px 0px;
+    border: 1px solid #8b8b8b;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .main .solutions {
+    -ms-grid-columns: 1fr 1fr 1fr;
+        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-areas: "card-1 card-2 card-3";
+  }
+}
+
+/* Media Queries Main */
 /*  =============================MAIN========================== */
-/* KEYFRAMES */
-/* typing text */
-/*@keyframes typing {
-    from {
-        width: 0;
-    }
-}
-
-@keyframes blink {
-    50% {
-        border-color: transparent;
-    }
-}*/
-/* typing text */
 /*# sourceMappingURL=index.css.map */
