--- a/index.css
+++ b/index.css
@@ -40,6 +40,17 @@ body {
   box-shadow: 6px 6px 16px -5px rgba(0, 0, 0, 0.75);
 }
 
+.h2 {
+  text-align: center;
+  text-transform: uppercase;
+  font-family: "Roboto Condensed", sans-serif;
+  font-size: 2.5rem;
+  color: black;
+  width: 60%;
+  border-radius: 20px 0 20px 0;
+  margin-left: 20px;
+}
+
 .button-primary {
   display: block;
   -webkit-box-pack: center;
@@ -291,6 +302,11 @@ body {
     -ms-flex-pack: distribute;
         justify-content: space-around;
         grid-template-areas: "header-logo header-content";
+    -ms-grid-columns: 1fr 1fr;
+        grid-template-columns: 1fr 1fr;
+    -ms-grid-rows: 1fr;
+        grid-template-rows: 1fr;
+    gap: 20px;
   }
   .header .header-content .h1 {
     font-size: 2.8rem;
@@ -308,6 +324,7 @@ body {
 
 .main .h1 {
   display: block;
+  padding: 10px 0px;
   margin: 50px auto;
   font-size: 2.5rem;
 }
@@ -476,27 +493,209 @@ body {
     margin: 20px;
     padding: 0px 0px 20px 0px;
     border: 1px solid #8b8b8b;
+    -webkit-box-shadow: 2px 4px 17px 0px rgba(0, 0, 0, 0.75);
+    box-shadow: 2px 4px 17px 0px rgba(0, 0, 0, 0.75);
   }
   .main .solutions .card-2 {
     margin: 20px;
     padding: 0px 0px 50px 0px;
     border: 1px solid #8b8b8b;
+    -webkit-box-shadow: 2px 4px 17px 0px rgba(0, 0, 0, 0.75);
+    box-shadow: 2px 4px 17px 0px rgba(0, 0, 0, 0.75);
   }
   .main .solutions .card-3 {
     margin: 20px;
     padding: 0px 0px 20px 0px;
     border: 1px solid #8b8b8b;
+    -webkit-box-shadow: 2px 4px 17px 0px rgba(0, 0, 0, 0.75);
+    box-shadow: 2px 4px 17px 0px rgba(0, 0, 0, 0.75);
   }
 }
 
 @media screen and (min-width: 1280px) {
   .main .solutions {
+        grid-template-areas: "card-1 card-2 card-3";
     -ms-grid-columns: 1fr 1fr 1fr;
         grid-template-columns: 1fr 1fr 1fr;
-        grid-template-areas: "card-1 card-2 card-3";
   }
 }
 
 /* Media Queries Main */
 /*  =============================MAIN========================== */
+/*  =============================BUSSINES========================== */
+.bussines {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr;
+      grid-template-columns: 1fr;
+      grid-template-areas: "services" "clients" "projects";
+}
+
+.bussines .services {
+  -ms-grid-row: 1;
+  -ms-grid-column: 1;
+  grid-area: services;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 1fr;
+      grid-template-columns: 1fr 1fr;
+      grid-template-areas: "logo content";
+}
+
+.bussines .services .logo {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: end;
+}
+
+.bussines .services .logo img {
+  width: 300px;
+  height: 300;
+  max-width: 100%;
+}
+
+.bussines .services .content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -ms-flex-item-align: center;
+      align-self: center;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: start;
+}
+
+.bussines .services .content .h2 {
+  margin-top: 50px;
+  margin-bottom: 0px;
+  -webkit-box-shadow: 0px;
+          box-shadow: 0px;
+  font-size: 4rem;
+}
+
+.bussines .services .content p {
+  font-size: 5rem;
+  margin: 0px 0px 0px 180px;
+  font-family: "Nanum Gothic", sans-serif;
+}
+
+.bussines .clients {
+  -ms-grid-row: 2;
+  -ms-grid-column: 1;
+  grid-area: clients;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 1fr;
+      grid-template-columns: 1fr 1fr;
+      grid-template-areas: "logo content";
+}
+
+.bussines .clients .logo {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: end;
+}
+
+.bussines .clients .logo img {
+  width: 300px;
+  height: 300;
+  max-width: 100%;
+}
+
+.bussines .clients .content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -ms-flex-item-align: center;
+      align-self: center;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: start;
+}
+
+.bussines .clients .content .h2 {
+  margin-top: 50px;
+  margin-bottom: 0px;
+  -webkit-box-shadow: 0px;
+          box-shadow: 0px;
+  font-size: 4rem;
+}
+
+.bussines .clients .content p {
+  font-size: 5rem;
+  margin: 0px 0px 0px 180px;
+  font-family: "Nanum Gothic", sans-serif;
+}
+
+.bussines .projects {
+  -ms-grid-row: 3;
+  -ms-grid-column: 1;
+  grid-area: projects;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 1fr;
+      grid-template-columns: 1fr 1fr;
+      grid-template-areas: "logo content";
+}
+
+.bussines .projects .logo {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: end;
+}
+
+.bussines .projects .logo img {
+  width: 300px;
+  height: 300px;
+  max-width: 100%;
+  max-height: auto;
+}
+
+.bussines .projects .content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -ms-flex-item-align: center;
+      align-self: center;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: start;
+}
+
+.bussines .projects .content .h2 {
+  margin-top: 50px;
+  margin-bottom: 0px;
+  -webkit-box-shadow: 0px;
+          box-shadow: 0px;
+  font-size: 4rem;
+}
+
+.bussines .projects .content p {
+  font-size: 5rem;
+  margin: 0px 0px 0px 180px;
+  font-family: "Nanum Gothic", sans-serif;
+}
+
+/*  =============================BUSSINES========================== */
 /*# sourceMappingURL=index.css.map */
