--- a/index.scss
+++ b/index.scss
@@ -17,9 +17,6 @@ body {
 /*  =============================GENERAL STYLES========================== */
 
 /*  =============================VARIABLES========================== */
-$min: 480px;
-$mid: 768px;
-$max: 1000px;
 $color-principal: #751bff;
 $roboto-condensed: "Roboto Condensed", sans-serif;
 $nonum-gotic: "Nanum Gothic", sans-serif;
@@ -46,6 +43,17 @@ $bebas: "Bebas Neue", cursive;
     -webkit-box-shadow: 6px 6px 16px -5px rgba(0, 0, 0, 0.75);
     -moz-box-shadow: 6px 6px 16px -5px rgba(0, 0, 0, 0.75);
     box-shadow: 6px 6px 16px -5px rgba(0, 0, 0, 0.75);
+}
+
+.h2 {
+    text-align: center;
+    text-transform: uppercase;
+    font-family: $roboto-condensed;
+    font-size: 2.5rem;
+    color: black;
+    width: 60%;
+    border-radius: 20px 0 20px 0;
+    margin-left: 20px;
 }
 
 .button-primary {
@@ -214,7 +222,6 @@ $bebas: "Bebas Neue", cursive;
 
     .header-logo {
         grid-area: header-logo;
-        //margin: 20px;
         img {
             display: block;
             margin: auto;
@@ -250,6 +257,9 @@ $bebas: "Bebas Neue", cursive;
         width: 100%;
         justify-content: space-around;
         grid-template-areas: "header-logo header-content";
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr;
+        gap: 20px;
         .header-content {
             .h1 {
                 font-size: 2.8rem;
@@ -269,6 +279,7 @@ $bebas: "Bebas Neue", cursive;
     margin-top: 50px;
     .h1 {
         display: block;
+        padding: 10px 0px;
         margin: 50px auto;
         font-size: 2.5rem;
     }
@@ -405,17 +416,26 @@ $bebas: "Bebas Neue", cursive;
             .card-1 {
                 margin: 20px;
                 padding: 0px 0px 20px 0px;
-                border: 1px solid rgb(139, 139, 139)
+                border: 1px solid rgb(139, 139, 139);
+                -webkit-box-shadow: 2px 4px 17px 0px rgba(0, 0, 0, 0.75);
+                -moz-box-shadow: 2px 4px 17px 0px rgba(0, 0, 0, 0.75);
+                box-shadow: 2px 4px 17px 0px rgba(0, 0, 0, 0.75);
             }
             .card-2 {
                 margin: 20px;
                 padding: 0px 0px 50px 0px;
-                border: 1px solid rgb(139, 139, 139)
+                border: 1px solid rgb(139, 139, 139);
+                -webkit-box-shadow: 2px 4px 17px 0px rgba(0, 0, 0, 0.75);
+                -moz-box-shadow: 2px 4px 17px 0px rgba(0, 0, 0, 0.75);
+                box-shadow: 2px 4px 17px 0px rgba(0, 0, 0, 0.75);
             }
             .card-3 {
                 margin: 20px;
                 padding: 0px 0px 20px 0px;
-                border: 1px solid rgb(139, 139, 139)
+                border: 1px solid rgb(139, 139, 139);
+                -webkit-box-shadow: 2px 4px 17px 0px rgba(0, 0, 0, 0.75);
+                -moz-box-shadow: 2px 4px 17px 0px rgba(0, 0, 0, 0.75);
+                box-shadow: 2px 4px 17px 0px rgba(0, 0, 0, 0.75);
             }
         }
     }
@@ -424,11 +444,133 @@ $bebas: "Bebas Neue", cursive;
 @media screen and (min-width: 1280px) {
     .main {
         .solutions {
-            grid-template-columns: 1fr 1fr 1fr;
             grid-template-areas: "card-1 card-2 card-3";
+            grid-template-columns: 1fr 1fr 1fr;
         }
     }
 }
 /* Media Queries Main */
 
 /*  =============================MAIN========================== */
+
+/*  =============================BUSSINES========================== */
+.bussines {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-areas:
+        "services"
+        "clients"
+        "projects";
+    .services {
+        grid-area: services;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-areas: "logo content";
+
+        .logo {
+            display: flex;
+            justify-content: end;
+            img {
+                width: 300px;
+                height: 300;
+                max-width: 100%;
+            }
+        }
+
+        .content {
+            display: flex;
+            flex-direction: column;
+            align-self: center;
+            align-items: start;
+
+            .h2 {
+                margin-top: 50px;
+                margin-bottom: 0px;
+                box-shadow: 0px;
+                font-size: 4rem;
+            }
+
+            p {
+                font-size: 5rem;
+                margin: 0px 0px 0px 180px;
+                font-family: $nonum-gotic;
+            }
+        }
+    }
+
+    .clients {
+        grid-area: clients;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-areas: "logo content";
+
+        .logo {
+            display: flex;
+            justify-content: end;
+            img {
+                width: 300px;
+                height: 300;
+                max-width: 100%;
+            }
+        }
+
+        .content {
+            display: flex;
+            flex-direction: column;
+            align-self: center;
+            align-items: start;
+
+            .h2 {
+                margin-top: 50px;
+                margin-bottom: 0px;
+                box-shadow: 0px;
+                font-size: 4rem;
+            }
+
+            p {
+                font-size: 5rem;
+                margin: 0px 0px 0px 180px;
+                font-family: $nonum-gotic;
+            }
+        }
+    }
+
+    .projects {
+        grid-area: projects;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-areas: "logo content";
+
+        .logo {
+            display: flex;
+            justify-content: end;
+            img {
+                width: 300px;
+                height: 300px;
+                max-width: 100%;
+                max-height: auto;
+            }
+        }
+
+        .content {
+            display: flex;
+            flex-direction: column;
+            align-self: center;
+            align-items: start;
+
+            .h2 {
+                margin-top: 50px;
+                margin-bottom: 0px;
+                box-shadow: 0px;
+                font-size: 4rem;
+            }
+
+            p {
+                font-size: 5rem;
+                margin: 0px 0px 0px 180px;
+                font-family: $nonum-gotic;
+            }
+        }
+    }
+}
+/*  =============================BUSSINES========================== */
