--- a/index.css
+++ b/index.css
@@ -5,6 +5,8 @@
 html {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+  min-height: 100%;
+  position: relative;
 }
 
 *,
@@ -319,7 +321,7 @@ body {
 /*  =============================HEADER========================== */
 /*  =============================MAIN========================== */
 .main {
-  margin-top: 50px;
+  margin: 100px 0px;
 }
 
 .main .h1 {
@@ -892,6 +894,9 @@ body {
   background-color: #751bff;
   font-family: "Nanum Gothic", sans-serif;
   color: white;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
 }
 
 /*  =============================FOOTER========================== */
@@ -902,15 +907,18 @@ body {
   -ms-grid-columns: 1fr;
       grid-template-columns: 1fr;
       grid-template-areas: "h2" "label" "input" "button";
-  margin: 20px auto;
+  margin: 0 auto;
+  margin-bottom: 100px;
   text-align: center;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  width: 100%;
 }
 
 .container-from .form {
-  width: 100%;
+  width: 50%;
+  margin: 0 auto;
 }
 
 .container-from .form .h1 {
@@ -950,6 +958,10 @@ body {
   -ms-grid-column: 1;
   grid-area: button;
   margin-top: 20px;
+}
+
+.container-from .form textarea {
+  width: 100%;
 }
 
 /*  =============================REGISTER========================== */
