--- a/index.scss
+++ b/index.scss
@@ -409,7 +409,7 @@ $bebas: "Bebas Neue", cursive;
     }
 }
 
-/* Media Queries Main */
+/* Mediaqueries Solutions Main */
 @media screen and (min-width: 768px) {
     .main {
         .solutions {
@@ -449,9 +449,7 @@ $bebas: "Bebas Neue", cursive;
         }
     }
 }
-/* Media Queries Main */
-
-/*  =============================MAIN========================== */
+/* Media Queries Solutions Main */
 
 /*  =============================BUSSINES========================== */
 .bussines {
@@ -464,15 +462,17 @@ $bebas: "Bebas Neue", cursive;
     .services {
         grid-area: services;
         display: grid;
-        grid-template-columns: 1fr 1fr;
-        grid-template-areas: "logo content";
-
+        grid-template-columns: 1fr;
+        grid-template-areas:
+            "logo"
+            "content";
+        margin: 50px 0px 70px 0px;
         .logo {
             display: flex;
-            justify-content: end;
+            justify-content: center;
             img {
-                width: 300px;
-                height: 300;
+                width: 200px;
+                height: 200;
                 max-width: 100%;
             }
         }
@@ -481,18 +481,21 @@ $bebas: "Bebas Neue", cursive;
             display: flex;
             flex-direction: column;
             align-self: center;
-            align-items: start;
+            align-items: center;
 
             .h2 {
-                margin-top: 50px;
-                margin-bottom: 0px;
                 box-shadow: 0px;
-                font-size: 4rem;
+                margin: 20px auto;
+                background-color: white;
+                color: black;
+                border: 1px solid black;
+                border-radius: 2px;
+                font-size: 2.2rem;
             }
 
             p {
-                font-size: 5rem;
-                margin: 0px 0px 0px 180px;
+                font-size: 3rem;
+                margin: 0 auto;
                 font-family: $nonum-gotic;
             }
         }
@@ -501,15 +504,17 @@ $bebas: "Bebas Neue", cursive;
     .clients {
         grid-area: clients;
         display: grid;
-        grid-template-columns: 1fr 1fr;
-        grid-template-areas: "logo content";
-
+        grid-template-columns: 1fr;
+        grid-template-areas:
+            "logo"
+            "content";
+        margin: 70px 0px 70px 0px;
         .logo {
             display: flex;
-            justify-content: end;
+            justify-content: center;
             img {
-                width: 300px;
-                height: 300;
+                width: 200px;
+                height: 200;
                 max-width: 100%;
             }
         }
@@ -518,18 +523,21 @@ $bebas: "Bebas Neue", cursive;
             display: flex;
             flex-direction: column;
             align-self: center;
-            align-items: start;
+            align-items: center;
 
             .h2 {
-                margin-top: 50px;
-                margin-bottom: 0px;
                 box-shadow: 0px;
-                font-size: 4rem;
+                margin: 20px auto;
+                background-color: white;
+                color: black;
+                border: 1px solid black;
+                border-radius: 2px;
+                font-size: 2.2rem;
             }
 
             p {
-                font-size: 5rem;
-                margin: 0px 0px 0px 180px;
+                font-size: 3rem;
+                margin: 0 auto;
                 font-family: $nonum-gotic;
             }
         }
@@ -538,17 +546,18 @@ $bebas: "Bebas Neue", cursive;
     .projects {
         grid-area: projects;
         display: grid;
-        grid-template-columns: 1fr 1fr;
-        grid-template-areas: "logo content";
-
+        grid-template-columns: 1fr;
+        grid-template-areas:
+            "logo"
+            "content";
+        margin: 70px 0px 70px 0px;
         .logo {
             display: flex;
-            justify-content: end;
+            justify-content: center;
             img {
-                width: 300px;
-                height: 300px;
+                width: 200px;
+                height: 200;
                 max-width: 100%;
-                max-height: auto;
             }
         }
 
@@ -556,21 +565,255 @@ $bebas: "Bebas Neue", cursive;
             display: flex;
             flex-direction: column;
             align-self: center;
-            align-items: start;
+            align-items: center;
 
             .h2 {
-                margin-top: 50px;
-                margin-bottom: 0px;
                 box-shadow: 0px;
-                font-size: 4rem;
+                margin: 20px auto;
+                background-color: white;
+                color: black;
+                border: 1px solid black;
+                border-radius: 2px;
+                font-size: 2.2rem;
             }
 
             p {
-                font-size: 5rem;
-                margin: 0px 0px 0px 180px;
+                font-size: 3rem;
+                margin: 0 auto;
                 font-family: $nonum-gotic;
             }
         }
     }
 }
+
+/* Mediaqueries Bussines Main */
+
+@media screen and (min-width: 768px) {
+    .main {
+        .bussines {
+            .services {
+                grid-template-areas: "logo content";
+                grid-template-columns: 1fr 1fr;
+                .logo {
+                    justify-content: end;
+                }
+                .content {
+                    .h2 {
+                        border: 0px;
+                        margin: 0px;
+                        align-self: start;
+                    }
+
+                    p {
+                        margin: 0px 0px 0px 120px;
+                        align-self: start;
+                    }
+                }
+            }
+
+            .clients {
+                grid-template-areas: "logo content";
+                grid-template-columns: 1fr 1fr;
+                .logo {
+                    justify-content: end;
+                }
+                .content {
+                    .h2 {
+                        border: 0px;
+                        margin: 0px;
+                        align-self: start;
+                    }
+
+                    p {
+                        margin: 0px 0px 0px 120px;
+                        align-self: start;
+                    }
+                }
+            }
+
+            .projects {
+                grid-template-areas: "logo content";
+                grid-template-columns: 1fr 1fr;
+                .logo {
+                    justify-content: end;
+                }
+                .content {
+                    .h2 {
+                        border: 0px;
+                        margin: 0px;
+                        align-self: start;
+                    }
+
+                    p {
+                        margin: 0px 0px 0px 120px;
+                        align-self: start;
+                    }
+                }
+            }
+        }
+    }
+}
+
+@media screen and (min-width: 1280px) {
+    .main {
+        .bussines {
+            grid-template-areas: "services clients projects";
+            grid-template-columns: 1fr 1fr 1fr;
+            .services {
+                grid-area: services;
+                grid-template-columns: 1fr;
+                grid-template-areas:
+                    "logo"
+                    "content";
+                gap: 3em;
+
+                .logo {
+                    justify-content: center;
+                }
+
+                .content {
+                    margin: 0px;
+                    .h2 {
+                        align-self: center;
+                        border: 0px;
+                        margin: 0px;
+                    }
+
+                    p {
+                        margin: 0px;
+                        align-self: center;
+                    }
+                }
+            }
+
+            .clients {
+                grid-area: clients;
+                grid-template-columns: 1fr;
+                grid-template-areas:
+                    "logo"
+                    "content";
+                gap: 3em;
+
+                .logo {
+                    justify-content: center;
+                }
+
+                .content {
+                    margin: 0px;
+                    .h2 {
+                        align-self: center;
+                        border: 0px;
+                        margin: 0px;
+                    }
+
+                    p {
+                        margin: 0px;
+                        align-self: center;
+                    }
+                }
+            }
+
+            .projects {
+                grid-area: projects;
+                grid-template-columns: 1fr;
+                grid-template-areas:
+                    "logo"
+                    "content";
+                gap: 3em;
+
+                .logo {
+                    justify-content: center;
+                }
+
+                .content {
+                    margin: 0px;
+                    .h2 {
+                        align-self: center;
+                        border: 0px;
+                        margin: 0px;
+                    }
+
+                    p {
+                        margin: 0px;
+                        align-self: center;
+                    }
+                }
+            }
+        }
+    }
+}
+
+/* Mediaqueries Bussines Main */
+
 /*  =============================BUSSINES========================== */
+
+/*  =============================MAIN========================== */
+
+
+/*  =============================FOOTER========================== */
+
+.footer {
+    display: grid;
+    gap:3;
+    justify-content: center;
+    background-color: $color-principal;
+    font-family: $nonum-gotic;
+    color: white;
+}
+
+/*  =============================FOOTER========================== */
+
+/*  =============================REGISTER========================== */
+.container-from {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-areas: 
+        "h2"
+        "label"
+        "input"
+        "button"
+    ;
+    margin: 20px auto;
+    text-align: center;
+    justify-content: center;
+    .form {
+        width: 100%;
+        .h1 {
+            grid-area: h2;
+            width: 100%;
+            margin: 20px 0px;
+            background-color: $color-principal;
+            color: white;
+            border-radius: 0px;
+        }
+    
+        .label {
+            grid-area: label;
+            font-family: $bebas;
+            font-size: 1.3rem;
+        }
+    
+        .input {
+            grid-area: input;
+            display: flex;
+            margin: 10px 0px;
+            width: 100%;
+            font-size: 1.5rem;
+            font-family: $roboto-condensed;
+        }
+    
+        .button-primary {
+            grid-area: button;
+            margin-top: 20px;
+        }
+    
+
+    }
+
+}
+/*  =============================REGISTER========================== */
+
+
+/*  =============================LOGIN========================== */
+
+/*  =============================LOGIN========================== */
